--- a/tennis-train.ipynb
+++ b/tennis-train.ipynb
@@ -29,7 +29,8 @@
     "import datetime;\n",
     "\n",
     "import json\n",
-    "config = json.load(open('config.json'))"
+    "config = json.load(open('config.json'))\n",
+    "train = False"
    ]
   },
   {
@@ -81,7 +82,7 @@
     }
    ],
    "source": [
-    "env = UnityEnvironment(file_name=\"Tennis_Windows_x86_64/Tennis.exe\",no_graphics=True, seed = config['SEED']['environment'])"
+    "env = UnityEnvironment(file_name=\"Tennis_Windows_x86_64/Tennis.exe\",no_graphics=train, seed = config['SEED']['environment'])"
    ]
   },
   {
@@ -136,7 +137,7 @@
    ],
    "source": [
     "# reset the environment\n",
-    "env_info = env.reset(train_mode=False)[brain_name]\n",
+    "env_info = env.reset(train_mode=train)[brain_name]\n",
     "\n",
     "# number of agents \n",
     "num_agents = len(env_info.agents)\n",
@@ -169,9 +170,9 @@
       "    \"GAMMA\": 0.99,\n",
       "    \"BUFFER_SIZE\": 400000,\n",
       "    \"BATCH_SIZE\": 256,\n",
-      "    \"WEIGHT_DECAY\": 0,\n",
+      "    \"WEIGHT_DECAY\": 0.0,\n",
       "    \"noise\": {\n",
-      "        \"sigma\": 0.2,\n",
+      "        \"sigma\": 0.01,\n",
       "        \"mu\": 0.0,\n",
       "        \"theta\": 0.15\n",
       "    },\n",
@@ -244,7 +245,7 @@
       "  (fc1): Linear(in_features=24, out_features=256, bias=True)\n",
       "  (batch): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "  (fc2): Linear(in_features=258, out_features=128, bias=True)\n",
-      "  (dropout): Dropout(p=0.2)\n",
+      "  (dropout): Dropout(p=0.001)\n",
       "  (fc3): Linear(in_features=128, out_features=1, bias=True)\n",
       ")\n"
      ]
@@ -252,11 +253,12 @@
    ],
    "source": [
     "from agent_ddpg import Agent\n",
-    "\n",
+    "agents = []\n",
     "print(json.dumps(config, indent=4))\n",
-    "agent = Agent(state_size, action_size, config['SEED']['agent'])\n",
-    "print(agent.actor_local)\n",
-    "print(agent.critic_local)"
+    "agents.append(Agent(state_size, action_size, config['SEED']['agent']))\n",
+    "agents.append(Agent(state_size, action_size, config['SEED']['agent']))\n",
+    "print(agents[0].actor_local)\n",
+    "print(agents[0].critic_local)"
    ]
   },
   {
@@ -292,9 +294,10 @@
     "    states = env_info.vector_observations                  # get the current state (for each agent)\n",
     "    ep_scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
     "    count = 0\n",
+    "    [agent.reset() for agent in agents]\n",
     "    while True:        \n",
     "        count += 1\n",
-    "        actions = agent.act(states) # select an action (for each agent)\n",
+    "        actions = [agents[i].act(states[i], True) for i in range(num_agents)] # select an action (for each agent)\n",
     "        actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
     "        env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
     "        next_states = env_info.vector_observations         # get next state (for each agent)\n",
@@ -302,18 +305,18 @@
     "        dones = env_info.local_done                        # see if episode finished\n",
     "        ep_scores += env_info.rewards                         # update the score (for each agent)\n",
     "        \n",
-    "        [agent.step(states[i], actions[i], rewards[i], next_states[i], dones[i]) for i in range(num_agents)]\n",
+    "        [agents[i].step(states[i], actions[i], rewards[i], next_states[i], dones[i]) for i in range(num_agents)]\n",
     "        \n",
-    "        agent.step_learn()\n",
+    "        [agent.step_learn() for agent in agents]\n",
     "        \n",
     "        states = next_states                               # roll over states to next time step\n",
     "        if np.any(dones):                                  # exit loop if episode finished\n",
     "            break\n",
-    "            \n",
+    "    #print(ep_scores)\n",
     "    \n",
     "    took = datetime.datetime.now() -start    \n",
     "    ep_score = np.max(ep_scores)\n",
-    "    scores.append(ep_scores)\n",
+    "    scores.append(ep_score)\n",
     "    scores_window.append(ep_score)\n",
     "    avg_score = np.mean(scores_window)\n",
     "    avg_scores.append(avg_score)    \n",
@@ -324,12 +327,14 @@
     "    if (solved_episode < 0 and avg_score >= expected_score):\n",
     "        print('Solved in episode '+ episode)\n",
     "        solved_episode = episode\n",
-    "        torch.save(agent.actor_local.state_dict(), 'solved_{:d}_actor_local.pth'.format(episode))\n",
-    "        torch.save(agent.critic_local.state_dict(), 'solved_{:d}_critic_local.pth'.format(episode))\n",
+    "        for i in range(num_agents):\n",
+    "            torch.save(agent.actor_local.state_dict(), 'solved_{:d}_actor_local.pth'.format(episode))\n",
+    "            torch.save(agent.critic_local.state_dict(), 'solved_{:d}_critic_local.pth'.format(episode))\n",
     "\n",
     "print('Solved in episode {}'.format(solved_episode))\n",
-    "torch.save(agent.actor_local.state_dict(), 'end_actor_local.pth')\n",
-    "torch.save(agent.critic_local.state_dict(), 'end_critic_local.pth')"
+    "for i in range(num_agents):\n",
+    "    torch.save(agents[i].actor_local.state_dict(), 'end_actor{}_local.pth'.format(i))\n",
+    "    torch.save(agents[i].critic_local.state_dict(), 'end_critic{}_local.pth'.format(i))"
    ]
   },
   {
