learnmethod from drlnd2, model min, searching for some learning

--- a/tennis.ipynb
+++ b/tennis.ipynb
@@ -1263,9 +1263,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "drlnd2",
+   "display_name": "drlnd",
    "language": "python",
-   "name": "drlnd2"
+   "name": "drlnd"
   },
   "language_info": {
    "codemirror_mode": {
